# are-neural-quantum-states-good

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
include/: ArpackSolver.hpp  Basis1DZ2_numpy.hpp  utils.hpp
python_src/: .gitignore  amplitude_supervised.py  exact_sampler.py  models.py  natural_gradient.py  sign_supervised.py  tree_utils.py  utils.py
python_utils/: rbm_j1j2_param.py  rbm_txyz_param.py  rbm_xxz_param.py
src/: RBM_J1J2_ER.cpp  RBM_J1J2_SR.cpp  RBM_TXYZ_ER.cpp  RBM_TXYZ_SR.cpp  RBM_XXZ_ER.cpp  basis_numpy.cpp  overlap_ed_rbm.cpp
src/ED/: J1J2-save.cpp  TXYZ-save.cpp
src/RBM/: RBM_J1J2_ER.cpp  RBM_J1J2_SR.cpp  RBM_TXYZ_ER.cpp  RBM_XXZ_SR.cpp
